[package]
name = "eznoise"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easy little noise library"
homepage = "https://github.com/lord-hellgrim/eznoise"
repository = "https://github.com/lord-hellgrim/eznoise"
readme = "README.md"

[dependencies]
rand = "0.8.5"
ring = "0.17.8"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
